--- a/publication.html
+++ b/publication.html
@@ -62,6 +62,8 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>N. C. Luong, <b>Q.-V. Pham</b>, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, and D. Niyato, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
+</li>
 <li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="">A Survey on Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; under review, <i>IEEE Journal of Biomedical and Health Informatics</i>.</p>
@@ -70,7 +72,11 @@
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
+</li>
+<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
 </li>
@@ -105,7 +111,7 @@
 <ol>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="http://dx.doi.org/10.1109/JIOT.2023.3248970">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
-<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
 </li>
@@ -366,7 +372,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-01 12:55:52 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-14 10:40:13 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
