--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
-<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, Dublin 2, Ireland</p>
+<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
 </ul>
 </td></tr></table>
@@ -74,8 +74,6 @@ Assistant Professor, Ph.D. <br />
 <li><p>[11/2022] Congratulations to Hoc Vu for his works on short-packet NOMA being accepted to IEEE TVT and IEEE TCCN. </p>
 </li>
 <li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
-</li>
-<li><p>[10/2022] I am chairing <a href="https://atc-conf.org/special-sessions/special-session-on-machine-learning-for-future-networks-and-iot-systems">a special session on machine learning for future networks</a>. Please visit Hanoi and attend our special session. </p>
 </li>
 <li><p>[09/2022] Congratulations to Dr. Thien for his work on <a href="https://ieeexplore.ieee.org/document/9908294">DL-enabled modulation classification in OFDM wireless systems</a> being accepted to IEEE Systems Journal.   </p>
 </li>
@@ -112,9 +110,9 @@ Assistant Professor, Ph.D. <br />
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
 <ol>
-<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
+<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
 <li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
 </li>
@@ -136,11 +134,11 @@ Assistant Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
-<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. From 2017 to 2022, he was in various academic positions with Kyung Hee University, Inje University, Changwon National University, and Pusan National University. Since Jan. 2023, he has been an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin. He is also serving as an ADVANCE CRT supervisor, and an Associate Investigator at the CONNECT centre.</p>
-<p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize cloud edge computing and future wireless systems. Specifically, his research focuses on three main thrusts, including edge intelligence, wireless for AI, and AI for wireless. He has been granted the Korea NRF Funding for outstanding young researchers from the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021. He is also an Editor of Journal of Network and Computer Applications and Scientific Reports and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
+<p>Quoc-Viet Pham received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland. He is also serving as an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre. Prior to this, he was in various academic positions in Korea with Kyung Hee University (2017-2018), Inje University, Changwon National University (2018-2019), and Pusan National University (2020-2023). </p>
+<p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-01 13:22:02 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-14 10:38:54 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
