--- a/publication.html
+++ b/publication.html
@@ -78,10 +78,6 @@
 </li>
 <li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
-</li>
-<li><p>X.-T. Nguyen, M.-D. Nguyen, <b>Q.-V. Pham</b>, V.-Q. Do, and W.-J. Hwang, "<a href="https://arxiv.org/abs/2206.06976">Resource Allocation for Compression-aided Federated Learning with High Distortion Rate</a>,” submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
-</li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
 <li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; under revision, <i>Transactions on Services Computing</i>.</p>
@@ -310,6 +306,10 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
+</li>
+<li><p>X.-T. Nguyen, M.-D. Nguyen, <b>Q.-V. Pham</b>, V.-Q. Do, and W.-J. Hwang, "<a href="https://arxiv.org/abs/2206.06976">Resource Allocation for Compression-aided Federated Learning with High Distortion Rate</a>,” <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
+</li>
 <li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9943034/">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
 </li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, M. Le, and W.-J. Hwang, &ldquo;<a href="">Semantic Graph Multi-agent Reinforcement Learning</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA)</i>, Jeju Island, Korea, Jul. 2022.</p>
@@ -372,7 +372,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-14 10:40:13 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-14 14:13:09 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
