--- a/publication.html
+++ b/publication.html
@@ -101,8 +101,6 @@
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under revision, <i>IEEE Transactions on Communications</i>.</p>
 </li>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="https://www.researchgate.net/publication/360541504_Improving_Performance_of_Deep_Reinforcement_Learning_by_Incorporating_Human_Expertise">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; submitted, <i>International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</i>, 2023.</p>
-</li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">Adaptive mm-Waveform for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>Engineering Applications of Artificial Intelligence</i>.</p>
@@ -114,8 +112,6 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="http://dx.doi.org/10.1109/JIOT.2023.3248970">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
-</li>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
@@ -125,6 +121,8 @@
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 143, pp. 401-419, Jun. 2023.</p>
+</li>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, O. A. Dobre, Z. Ding, and L. Song, &ldquo;<a href="http://dx.doi.org/10.1109/JIOT.2023.3248970">Guest Editorial Special Issue on Aerial Computing for the Internet of Things (IoT)</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 10, no. 7, pp. 5623-5625, Apr. 2023.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 72, no. 3, pp. 4079-4084, Mar. 2023.</p>
 </li>
@@ -315,6 +313,8 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
+</li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
 </li>
 <li><p>X.-T. Nguyen, M.-D. Nguyen, <b>Q.-V. Pham</b>, V.-Q. Do, and W.-J. Hwang, "<a href="https://arxiv.org/abs/2206.06976">Resource Allocation for Compression-aided Federated Learning with High Distortion Rate</a>,” <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
@@ -381,7 +381,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-24 13:39:22 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-06 09:12:17 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
