--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[04/2023] Congratulations Dr. Thi Nguyen for his work on <a href="">deep RL</a> being accepted for presentation at ICCS 2023 (Prague, Czech), a ranked A conference.</p>
+</li>
 <li><p>[03/2023] Congratulations Hoc and Tung for our papers on <a href="">wireless security</a> and <a href="">federated learning</a> being accepted for presentation at IEEE ICC in Rome, Italy.</p>
 </li>
 <li><p>[02/2023] <a href="team.html">Various scholarships</a> are available for MSc and PhD students. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
@@ -124,7 +126,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-14 14:16:12 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-06 09:10:54 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
