--- a/activity.html
+++ b/activity.html
@@ -50,6 +50,8 @@
 <p><div id="TPC Chair/Track Chair"></p>
 <h2>TPC Chair/Track Chair</h2>
 <ul>
+<li><p>2023: <a href="https://soict.org/">SoICT 2023</a></p>
+</li>
 <li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/">EAI GameNets 2022</a>, <a href="https://soict.org/">SoICT 2022</a>, <a href="https://atc-conf.org/">IEEE ATC 2022</a></p>
 </li>
 </ul>
@@ -143,7 +145,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-17 18:35:29 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-13 09:24:32 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
