--- a/team.html
+++ b/team.html
@@ -55,31 +55,27 @@
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]: UAV communications in 5G and beyond (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
+<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]. Current position: Lecturer, Mount Kenya University, Rwanda</p>
 </li>
-<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02]: Swarm intelligence for D2D communications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
+<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02]. Current position: PhD student, Pusan National University, Korea</p>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02]: Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02]. Current position: Lecturer, Thuyloi University, Vietnam</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]. Current position: Lecturer, Hue University, Vietnam</p>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: Coalitional games for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
+<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. </p>
 </li>
-<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: DRL for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. Current position: PhD student, SeoulTech, Korea</p>
 </li>
-<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: D2D communications with unlicensed spectrum (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. </p>
 </li>
-<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]: Blockchain for smart healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. </p>
 </li>
 </ul>
 <p><div id="Visiting Scholars"></p>
 <h2>Visiting Scholars</h2>
 <ul>
 <li><p>Prof. Won-Joo Hwang, Pusan National University, Korea (July - August 2023)</p>
-</li>
-<li><p>Prof. Chung Sang-Hwa, Pusan National University, Korea (July - August 2023)</p>
-</li>
-<li><p>Prof. Kim Jong-Deo, Pusan National University, Korea (July - August 2023)</p>
 </li>
 </ul>
 <p><div id="Visiting Students"></p>
@@ -127,6 +123,8 @@
 </li>
 <li><p><a href="https://nsc.deakin.edu.au/">Prof. Pubudu N. Pathirana</a>: Deakin University, Australia</p>
 </li>
+<li><p><a href="https://sites.google.com/view/dinh-chi-nguyen">Prof. Dinh C. Nguyen</a>: The University of Alabama in Huntsville, USA</p>
+</li>
 <li><p>...</p>
 </li>
 </ul>
@@ -155,7 +153,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-22 18:08:04 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-15 13:04:07 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
