--- a/publication.html
+++ b/publication.html
@@ -69,6 +69,8 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future Internet: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+</li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>N. C. Luong, <b>Q.-V. Pham</b>, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, and D. Niyato, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
@@ -381,7 +383,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-07 09:14:11 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-15 13:08:33 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
